--- a/src/app/components/footer/footer.css
+++ b/src/app/components/footer/footer.css
@@ -1,6 +1,6 @@
 footer {
   display: flex;
-  background-color: rgba(51, 110, 177, 0.685);
+  background-color:#1e3c70;
   width: 100vw;
   justify-content: space-between;
   padding: 10px;
