--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,13 +1,21 @@
 header {
   display: flex;
-  background-color: rgba(51, 110, 177, 0.685);
+  background-color: #1e3c70;
   width: 100vw;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px;
 }
 
 .image {
   position: relative;
   width: 100px;
-  height: 100px;
+  height: 120px;
+}
+
+@media (max-width: 768px) {
+  .image {
+    position: relative;
+    width: 50px;
+    height: 60px;
+  }
 }
