--- a/src/app/components/vote/vote.css
+++ b/src/app/components/vote/vote.css
@@ -1,15 +1,42 @@
 .votetracker {
-    display: flex;
-    align-items: center;
-    background-color: #cfcfcf21;
+  background-color: #cfcfcf21;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .voteCard {
-    border-radius: 8px;
-    border: 4px solid #cfcfcf;
-    padding: 10px;
-    margin: 10px;
-    width: 10vw;
-    height: 10vw;
-    text-align: center;
+  position: relative;
+  border: 1px solid #cfcfcf;
+  margin: 10px 0px;
+  width: 20%;
+  max-width: 250px;
+  min-width: 170px;
+  height: 10%;
+  min-height: 150px;
+  z-index: -1;
+}
+
+.voteCard img {
+  z-index: -1;
+}
+
+.img {
+    position: relative;
+    width: 100%;
+    height: 80px;
+  }
+
+.bodyTracker {
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 10px;
+  overflow: hidden;
+  border: 1px solid #cfcfcf;
+  min-height: 190px;
+}
+.voteName {
+  position: relative;
+  padding: 10px;
 }
