--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,20 @@
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-width: none;
+  text-decoration: none;
 }
 
+a {
+  color: #495057;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .form {
   display: flex;
   flex-direction: column;
@@ -27,8 +39,48 @@ input {
 button {
   margin: 10px;
   padding: 5px;
+  background-color: #007bff;
+  border-color: #007bff;
+  color: white;
+  border-radius: 8px;
 }
-
 .title {
   text-align: center;
+}
+.titleTrackerVote {
+  background-color: #e8f0fb;
+  color: #2b4e84;
+  border: 1px solid #cfcfcf;
+  padding: 10px;
+}
+
+li {
+  list-style: none;
+  color: #495057;
+}
+.main {
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: start;
+  padding: 10px;
+}
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .main {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .titleTrackerVote {
+    padding: 15px;
+    font-size: 1rem;
+  }
 }
