--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,10 @@ button {
   color: white;
   border-radius: 8px;
 }
+.remove-button{
+  background-color: #ff0000;
+  border-color: #ff0000;
+}
 .title {
   text-align: center;
 }
@@ -71,6 +75,10 @@ li {
   align-items: center;
   padding: 10px;
   width: 100%;
+}
+select{
+  padding: 5px;
+  margin: 10px;
 }
 
 @media (max-width: 768px) {
