--- a/src/app/components/vote/vote.css
+++ b/src/app/components/vote/vote.css
@@ -67,3 +67,10 @@
   overflow: auto;
   scrollbar-width: auto;
 }
+
+.votes{
+  border: 1px solid black;
+  margin: 5px;
+  padding: 5px;
+  max-height: 40px;
+}
