--- a/src/app/components/vote/vote.css
+++ b/src/app/components/vote/vote.css
@@ -69,7 +69,10 @@
 }
 
 .votes{
+  display: flex;
+  align-items: center;
   border: 1px solid black;
+  border-radius: 8px;
   margin: 5px;
   padding: 5px;
   max-height: 40px;
